fix missing space

--- a/src/assets/styles/layouts/productivity.css
+++ b/src/assets/styles/layouts/productivity.css
@@ -43,16 +43,13 @@
   padding-bottom: 40px;
   flex-direction: row;
   gap: 24px;
-  
 }
 
-.productivity__content-item:nth-child(1)
-{
+.productivity__content-item:nth-child(1) {
   border-bottom: 3px solid rgba(116, 143, 181, 0.15);
 }
 
-.productivity__content-item:nth-child(2)
-{
+.productivity__content-item:nth-child(2) {
   border-bottom: 3px solid rgba(116, 143, 181, 0.15);
 }
 
@@ -66,7 +63,6 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
- 
 }
 
 .productivity__content-item-desc {
